frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nursery-frontend
  labels:
    app: nursery-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nursery-frontend
  template:
    metadata:
      labels:
        app: nursery-frontend
    spec:
      containers:
      - name: nursery-frontend
        image: kavitharc/bloom-haven-nursery-frontend:28
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
