deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nursery-frontend
  labels:
    app: nursery-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nursery-frontend
  template:
    metadata:
      labels:
        app: nursery-frontend
    spec:
      containers:
      - name: nursery-frontend
        image: kavitharc/bloom-haven-nursery-frontend:21
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nursery-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: nursery-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
