frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nursery-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: nursery-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
