ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nursery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nursery-frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nursery-backend-svc
            port:
              number: 5000
